--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 html,
 body {
   overflow: hidden;
+  background-color: #21130d;
 }
 
 .webgl {
@@ -13,13 +14,14 @@ body {
   top: 0;
   left: 0;
   outline: none;
+  z-index: 2;
 }
 
 #file-input {
   position: fixed;
   top: 10px;
   left: 10px;
-  z-index: 100;
+  z-index: 2;
   color: white;
 }
 
@@ -28,13 +30,74 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 20%;
+  height: 100%;
   background-color: transparent;
+  z-index: 1;
 }
 
 #audio {
   position: fixed;
-  left: 10px;
-  top: 10%;
-  width: 30%;
+  left: 20%;
+  top: 5%;
+  width: 60%;
+  z-index: 2;
+}
+
+audio::-webkit-media-controls-enclosure {
+  background-color: transparent;
+  overflow: hidden;
+  filter: invert(100%);
+}
+
+audio::-webkit-media-controls-panel {
+  /* background-color: rgba(255, 0, 255, 1); */
+  /* background-color: transparent; */
+}
+
+audio::-webkit-media-controls-mute-button {
+}
+
+audio::-webkit-media-controls-play-button {
+}
+
+audio::-webkit-media-controls-play-button:disabled {
+}
+
+audio::-webkit-media-controls-timeline-container {
+}
+
+audio::-webkit-media-controls-current-time-display {
+}
+
+audio::-webkit-media-controls-time-remaining-display {
+}
+
+audio::-webkit-media-controls-volume-control-container {
+}
+
+audio::-webkit-media-controls-timeline {
+}
+
+audio::-webkit-media-controls-volume-slider-container {
+}
+
+audio::-webkit-media-controls-volume-slider {
+}
+
+audio::-webkit-media-controls-seek-back-button {
+}
+
+audio::-webkit-media-controls-seek-forward-button {
+}
+
+audio::-webkit-media-controls-fullscreen-button {
+}
+
+audio::-webkit-media-controls-rewind-button {
+}
+
+audio::-webkit-media-controls-return-to-realtime-button {
+}
+
+audio::-webkit-media-controls-toggle-closed-captions-button {
 }
